use Collection in APIs; fix code smell: 'Stream.toList()'